code/deploy/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollouts-demo
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
      - image: docker.io/argoproj/rollouts-demo:blue
        imagePullPolicy: IfNotPresent
        name: rollouts-demo
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
