code/deploy/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rollouts-demo
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: rollouts-demo
